--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -110,6 +110,7 @@ mime ^audio|ogg$, terminal, has mplayer  = mplayer -- "$@"
 mime ^audio|ogg$, terminal, has mplayer2 = mplayer2 -- "$@"
 mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
 ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
+ext midi?,        terminal, has timidity = timidity -- "$@"
 
 #--------------------------------------------
 # Video/Audio with a GUI
