--- a/ncmpcpp/.ncmpcpp/config
+++ b/ncmpcpp/.ncmpcpp/config
@@ -28,7 +28,7 @@ autocenter_mode = yes
 centered_cursor = yes
 
 progressbar_look = "◾◾◽"
-progressbar_boldness = yes
+#progressbar_boldness = yes
 
 user_interface = alternative
 
@@ -56,11 +56,15 @@ state_line_color = red
 main_window_color = magenta
 color1 = green
 color2 = red
-main_window_highlight_color = green
+
+current_item_prefix = "$(green)$r"
+current_item_suffix = "$/r$(end)
+
 progressbar_color = black
 progressbar_elapsed_color = green
 statusbar_color = green
 alternative_ui_separator_color = black
-active_column_color = red
+#active_column_color = red
 window_border_color = magenta
 active_window_border = green
+#execute_on_song_change = "$HOME/utils/mnuc.sh"
