--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -18,10 +18,11 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-[bar/bar1]
+[bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 35
+height = 32
+dpi=128
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 6.0
@@ -42,10 +43,9 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = SpaceMono Nerd Font Mono:pixelsize=20;-1
-font-1 = fixed:pixelsize=20;1
-font-2 = unifont:fontformat=truetype:size=10:antialias=false;0
-font-3 = siji:pixelsize=20;1
+font-0 = fixed:pixelsize=10;1
+font-1 = unifont:fontformat=truetype:size=10:antialias=false;0
+font-2 = Wuncon Siji:pixelsize=10;1
 
 modules-left = i3
 modules-center = mpd
@@ -56,9 +56,13 @@ tray-padding = 2
 ;tray-transparent = true
 ;tray-background = #0063ff
 
+;wm-restack = bspwm
 ;wm-restack = i3
 
 ;override-redirect = true
+
+;scroll-up = bspwm-desknext
+;scroll-down = bspwm-deskprev
 
 ;scroll-up = i3wm-wsnext
 ;scroll-down = i3wm-wsprev
@@ -96,6 +100,25 @@ label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
+[module/bspwm]
+type = internal/bspwm
+
+label-focused = %index%
+label-focused-background = ${colors.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 2
+
+label-occupied = %index%
+label-occupied-padding = 2
+
+label-urgent = %index%!
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 2
+
+label-empty = %index%
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 2
+
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
@@ -108,6 +131,27 @@ wrapping-scroll = false
 label-mode-padding = 2
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
+
+; focused = Active workspace on focused monitor
+label-focused = %index%
+label-focused-background = ${module/bspwm.label-focused-background}
+label-focused-underline = ${module/bspwm.label-focused-underline}
+label-focused-padding = ${module/bspwm.label-focused-padding}
+
+; unfocused = Inactive workspace on any monitor
+label-unfocused = %index%
+label-unfocused-padding = ${module/bspwm.label-occupied-padding}
+
+; visible = Active workspace on unfocused monitor
+label-visible = %index%
+label-visible-background = ${self.label-focused-background}
+label-visible-underline = ${self.label-focused-underline}
+label-visible-padding = ${self.label-focused-padding}
+
+; urgent = Workspace with urgency hint set
+label-urgent = %index%
+label-urgent-background = ${module/bspwm.label-urgent-background}
+label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
 [module/mpd]
 type = internal/mpd
@@ -139,6 +183,8 @@ bar-empty = ─
 bar-empty-font = 2
 bar-empty-foreground = ${colors.foreground-alt}
 
+
+
 #[module/backlight-acpi]
 #inherit = module/xbacklight
 #type = internal/backlight
@@ -147,14 +193,13 @@ bar-empty-foreground = ${colors.foreground-alt}
 [module/screen]
 type = custom/script
 exec = light -G
-scroll-up = light -A 5
-scroll-down = light -U 5
+scroll-up =
+scroll-down =
 interval = 0.1
 format-prefix = " "
 label = %output%
 label-foreground = ${colors.foreground-alt}
 format-padding = 1
-
 
 [module/cpu]
 type = internal/cpu
@@ -210,30 +255,21 @@ format-disconnected =
 ;label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
 
-#[module/date]
-#type = internal/date
-#interval = 5
-
-#date =
-#date-alt = " %Y-%m-%d"
-
-#time = %H:%M
-#time-alt = %H:%M:%S
-
-#format-prefix = 
-#format-prefix-foreground = ${colors.foreground-alt}
-#format-underline = #0a6cf5
-
-#label = %date% %time%
-
 [module/date]
 type = internal/date
-format-prefix = ""
-label = %{F#99}%date%%{F-}   %{F#fff}%time%%{F-}
+interval = 5
+
 date = %m/%d/%Y
-date-alt = %A, %B %d, %Y
+date-alt = 
+
 time = %I:%M %p
 time-alt = ${self.time}
+
+format-prefix = 
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #0a6cf5
+
+label = %{F#99}%date%%{F-}   %{F#fff}%time%%{F-}
 
 [module/volume]
 type = internal/volume
