--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -2,11 +2,13 @@
 exec --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nm-applet
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+# exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id feh --bg-scale $HOME/Pictures/wallhaven-440766_2560x1440.png
 exec --no-startup-id xss-lock -- i3lock -n -i $HOME/.config/i3/lockscreen.png
 exec --no-startup-id /usr/local/bin/grive-sync.sh sync googledrive
 exec --no-startup-id compton
+exec --no-startup-id redshift-gtk
+exec --no-startup-id volnoti
 
 #application autostart
 exec --no-startup-id i3-msg 'workspace 10; exec --no-startup-id slack; workspace 1'
@@ -14,9 +16,10 @@ exec --no-startup-id i3-msg 'workspace 1; exec --no-startup-id firefox'
 
 #keybinds and custom settings
 for_window [class="^.*"] border pixel 1
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer sset Master -q 5%+
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer sset Master -q 5%-
-bindsym XF86AudioMute exec --no-startup-id amixer sset Master toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer sset Master -q 5%+ && volnoti-show $(amixer get Master | grep -Po '[0-9]+(?=%)' | head -1)"
+bindsym XF86AudioLowerVolume exec --no-startup-id "amixer sset Master -q 5%- && volnoti-show $(amixer get Master | grep -Po '[0-9]+(?=%)' | head -1)"
+bindsym XF86AudioMute exec --no-startup-id "amixer sset Master toggle && if amixer get Master | grep -Fq '[off]'; then volnoti-show -m; else volnoti-show $(amixer get Master | grep -Po '[0-9]+(?=%)' | head -1); fi"
+
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5 # increase screen brightness
 bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5 # decrease screen brightness
 bindsym $mod+Return exec urxvtcd
@@ -26,6 +29,24 @@ bindsym $mod+m exec --no-startup-id rofi-mpc
 workspace_auto_back_and_forth yes
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
+bindsym $mod+c exec --no-startup-id "rofi -show calc -modi calc -no-show-match -no-sort"
+
+# i3pystatus
+bar {
+    status_command    python $HOME/.config/i3pystatus/config.py
+    position          top
+    workspace_buttons yes
+    font pango:Hack, FontAwesome 18
+    colors {
+        background #141625
+        statusline #e7dfd9
+        separator  #081419
+        focused_workspace  #2aa198 #073642 #eee895
+        active_workspace   #073642 #859900 #839496
+        inactive_workspace #002b36 #002b36 #586e75
+        urgent_workspace   #cb4b16 #dc322f #fdf6e3
+    }
+}
 
 # default settings
 set $mod Mod1
