floating on click

--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -21,6 +21,7 @@ battery_level{
 arch_updates {
     include_aur = 'True'
     format = ' {total}'
+    on_click 1 = 'exec urxvtcd -e yay -Syu'
 }
 
 backlight {
@@ -40,6 +41,7 @@ volume_status {
     command = 'pamixer'
     format=' {percentage}'
     format_muted=''
+    on_click 3 = 'exec pavucontrol'
 }
 
 i3pystatus mpd {
