--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -28,7 +28,7 @@ workspace_auto_back_and_forth yes
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 bindsym $mod+c exec --no-startup-id "rofi -show calc -modi calc -no-show-match -no-sort"
-for_window [class="^pavucontrol$"] floating enable
+for_window [class="Pavucontrol"] floating enable
 
 bar {
     position top
