--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -7,6 +7,7 @@ order += battery_level
 order += clock
 
 clock {
+    format = '{America/Chicago}'
     format_time = '%a %b %d %I:%M'
     on_click 1 = 'exec ~/utils/scripts/screenshot.sh'
 }
