--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -4,12 +4,19 @@ order += backlight
 order += netdata
 order += arch_updates
 order += battery_level
+order += 'i3pystatus battery'
 order += clock
 
 clock {
     format = '{America/Chicago}'
     format_time = '%a %b %d %I:%M'
     on_click 1 = 'exec ~/utils/scripts/screenshot.sh'
+}
+
+i3pystatus battery {
+    module = 'battery'
+    format = '{consumption:.1f}W'
+    alert = False
 }
 
 battery_level{
