--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -1,3 +1,4 @@
+order += 'spotify'
 order += 'i3pystatus mpd'
 order += volume_status
 order += backlight
@@ -15,7 +16,7 @@ clock {
 
 i3pystatus battery {
     module = 'battery'
-    format = '{consumption:.1f}W'
+    format = '{consumption:.0f}W'
     alert = False
 }
 
@@ -41,7 +42,7 @@ backlight {
 
 netdata {
     cache_timeout = 10
-    format = ' \?color=total {download}'
+    format = ' \?color=download {download}'
 }
 
 volume_status {
@@ -60,4 +61,12 @@ i3pystatus mpd {
         "play": " ",
         "stop": " ",
     }
+}
+
+spotify {
+    button_next = 4
+    button_play_pause = 1
+    button_previous = 5
+    format = "{title}::{artist}"
+    format_down = ""
 }
