--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -3,3 +3,5 @@
 default_linemode devicons
 set preview_images true
 set preview_images_method urxvt
+set colorscheme desktop
+map DD shell map DD shell mv %s /home/${USER}/.local/share/Trash/files/ 
