--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,17 +1,14 @@
 #autostart
-# exec --no-startup-id /usr/bin/xrandr --output eDP1 --mode 1920x1080
 exec --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nm-applet
-exec --no-startup-id feh --bg-scale $HOME/Pictures/wallhaven-490733.jpg
-exec --no-startup-id xss-lock -- i3lock -n -i $HOME/Pictures/wallhaven-490733.jpg
+exec --no-startup-id feh --bg-scale $HOME/Pictures/wallhaven-440766_2560x1440.png
+exec --no-startup-id xss-lock -- i3lock -nei ~/Pictures/stretched-2560-1440-673780.png
 exec --no-startup-id /usr/local/bin/grive-sync.sh sync googledrive
 exec --no-startup-id compton
 exec --no-startup-id redshift-gtk
-exec --no-startup-id volnoti -t 1
 
 #application autostart
-exec --no-startup-id i3-msg 'workspace 10; exec --no-startup-id slack; workspace 1; exec --no-startup-id firefox'
 
 #keybinds and custom settings
 for_window [class="^.*"] border pixel 1
@@ -21,22 +18,26 @@ bindsym XF86AudioMute exec --no-startup-id "amixer sset Master toggle
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5 # increase screen brightness
 bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5 # decrease screen brightness
 bindsym $mod+Return exec urxvtcd
-bindsym $mod+d exec --no-startup-id rofi -font "mono 12" -show run
+bindsym $mod+d exec --no-startup-id rofi -show run
 bindsym $mod+Shift+e exec $HOME/.config/rofi-power/rofi-power
 bindsym $mod+m exec --no-startup-id rofi-mpc
 workspace_auto_back_and_forth yes
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 bindsym $mod+c exec --no-startup-id "rofi -show calc -modi calc -no-show-match -no-sort"
+bindsym $mod+n exec --no-startup-id "urxvtcd -name Ranger -e ranger"
 for_window [class="Pavucontrol"] floating enable
+for_window [instance="Ranger"] floating enable
 
 bar {
     position top
     font pango:Hack, FontAwesome 12
+    strip_workspace_numbers yes
+    separator_symbol " "
     status_command py3status -c $HOME/.config/i3/i3status.conf
 
     colors {
-        background #000000
+        background #141021
         statusline #ffffff
         separator #666666
 
@@ -79,16 +80,16 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
+set $ws1 "1: "
+set $ws2 "2: "
+set $ws3 "3: "
+set $ws4 "4: "
+set $ws5 "5: "
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
-set $ws10 "10"
+set $ws10 "10: "
 
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
