--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,5 +1,4 @@
 #autostart
-exec --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nm-applet
 exec --no-startup-id feh --bg-scale $HOME/Pictures/wallhaven-440766_2560x1440.png
@@ -7,11 +6,19 @@ exec --no-startup-id xss-lock -- i3lock -nei ~/Pictures/stretched-2560-1440-6737
 exec --no-startup-id /usr/local/bin/grive-sync.sh sync googledrive
 exec --no-startup-id compton
 exec --no-startup-id redshift-gtk
+exec --no-startup-id beet mpdstats
 
 #application autostart
+assign [class="Thunderbird"] 6: 
+assign [class="Slack"] 10: 
+assign [instance="ncmpcpp"] 5: 
+
+exec --no-startup-id thunderbird
+exec --no-startup-id "urxvtcd -name ncmpcpp -e ncmpcpp"
+exec --no-startup-id i3-msg 'workspace 1: ; exec --no-startup-id firefox'
+exec --no-startup-id slack
 
 #keybinds and custom settings
-for_window [class="^.*"] border pixel 1
 bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer sset Master -q 5%+
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer sset Master -q 5%-
 bindsym XF86AudioMute exec --no-startup-id "amixer sset Master toggle
@@ -21,13 +28,26 @@ bindsym $mod+Return exec urxvtcd
 bindsym $mod+d exec --no-startup-id rofi -show run
 bindsym $mod+Shift+e exec $HOME/.config/rofi-power/rofi-power
 bindsym $mod+m exec --no-startup-id rofi-mpc
-workspace_auto_back_and_forth yes
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 bindsym $mod+c exec --no-startup-id "rofi -show calc -modi calc -no-show-match -no-sort"
 bindsym $mod+n exec --no-startup-id "urxvtcd -name Ranger -e ranger"
+
+#settings
+for_window [class="^.*"] border pixel 1
 for_window [class="Pavucontrol"] floating enable
 for_window [instance="Ranger"] floating enable
+
+set $ws1 "1: "
+set $ws2 "2: "
+set $ws3 "3: "
+set $ws4 "4: "
+set $ws5 "5: "
+set $ws6 "6: "
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10: "
 
 bar {
     position top
@@ -79,17 +99,6 @@ bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
-
-set $ws1 "1: "
-set $ws2 "2: "
-set $ws3 "3: "
-set $ws4 "4: "
-set $ws5 "5: "
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10: "
 
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
