--- a/ncmpcpp/.ncmpcpp/config
+++ b/ncmpcpp/.ncmpcpp/config
@@ -12,7 +12,8 @@ visualizer_look = "+|"
 
 song_list_format = {%a - }{%t}|{$8%f$9}$R{$3(%l)$9}
 song_status_format = {{%a{ "%b"{ (%y)}} - }{%t}}|{%f}
-song_library_format = {%n - }{%t}|{%f}
+#song_library_format = {%n - }{%t}|{%f}
+song_library_format = {%f}
 
 alternative_header_first_line_format = $b$1$aqqu$/a$3 {%t}|{%f} $1$atqq$/a$9$/b
 
@@ -46,7 +47,7 @@ mouse_support = yes
 mouse_list_scroll_whole_page = no
 
 search_engine_default_search_mode = 2
-external_editor = nano
+external_editor = nvim
 use_console_editor = yes
 
 colors_enabled = yes
@@ -67,4 +68,5 @@ alternative_ui_separator_color = black
 #active_column_color = red
 window_border_color = magenta
 active_window_border = green
-#execute_on_song_change = "$HOME/utils/mnuc.sh"
+#execute_on_song_change = "$HOME/utils/scripts/art.sh"
+allow_for_physical_item_deletion=yes
