--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -4,4 +4,5 @@ default_linemode devicons
 set preview_images true
 set preview_images_method urxvt
 set colorscheme desktop
-map DD shell map DD shell mv %s /home/${USER}/.local/share/Trash/files/ 
+map DD shell mv %s /home/${USER}/.local/share/Trash/files/ 
+set draw_borders true
