--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -1,8 +1,4 @@
-# An example configuration file for MPD.
-# Read the user manual for documentation: http://www.musicpd.org/doc/user/
-# or /usr/share/doc/mpd/user-manual.html
-
-# Required files
+#Required files
 db_file            "~/.config/mpd/mpd.db"
 log_file           "~/.config/mpd/mpd.log"
 
@@ -10,8 +6,9 @@ log_file           "~/.config/mpd/mpd.log"
 music_directory    "~/Music"
 playlist_directory "~/.config/mpd/playlists"
 pid_file           "~/.config/mpd/pid"
-#state_file         "~/.config/mpd/state"
-#sticker_file       "~/.config/mpd/sticker.sql"
+state_file         "~/.config/mpd/state"
+sticker_file       "~/.config/mpd/sticker.sql"
+replaygain "track"
 
 audio_output {
         type            "pulse"
@@ -25,28 +22,21 @@ audio_output {
     format                  "44100:16:2"
 }
 
-# For network
-bind_to_address		"localhost"
+audio_output {
+	type		"httpd"
+	name		"Music Stream"
+	encoder		"vorbis"		# optional
+	port		"8000"
+#	quality		"5.0"			# do not define if bitrate is defined
+	bitrate		"128"			# do not define if quality is defined
+	format		"44100:16:1"
+	always_on       "yes"			# prevent MPD from disconnecting all listeners when playback is stopped.
+	tags            "yes"			# httpd supports sending tags to listening streams.
+}
 
-# Input #######################################################################
-#
+bind_to_address		"localhost"
 
 input {
         plugin "curl"
-#       proxy "proxy.isp.com:8080"
-#       proxy_user "user"
-#       proxy_password "password"
 }
-
-# Character Encoding ##########################################################
-#
-# If file or directory names do not display correctly for your locale then you 
-# may need to modify this setting.
-#
 filesystem_charset		"UTF-8"
-#
-# This setting controls the encoding that ID3v1 tags should be converted from.
-#
-id3v1_encoding			"UTF-8"
-#
-###############################################################################
