--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,12 +1,17 @@
 #autostart
+exec --no-startup-id xrandr -s 2560x1440
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nm-applet
 exec --no-startup-id feh --bg-scale $HOME/Pictures/wallhaven-440766_2560x1440.png
-exec --no-startup-id xss-lock -- i3lock -nei ~/Pictures/stretched-2560-1440-673780.png
+exec --no-startup-id xss-lock -- betterlockscreen -l
 exec --no-startup-id /usr/local/bin/grive-sync.sh sync googledrive
 exec --no-startup-id compton
-exec --no-startup-id redshift-gtk
 exec --no-startup-id beet mpdstats
+exec --no-startip-id redshift-gtk
+exec --no-startup-id caffeine
+exec --no-startup-id megasync
+exec --no-startup-id blueberry-tray
+exec --no-startup-id betterlockscreen -l
 
 #application autostart
 assign [class="Thunderbird"] 6: 
@@ -14,7 +19,7 @@ assign [class="Slack"] 10: 
 assign [instance="ncmpcpp"] 5: 
 
 exec --no-startup-id thunderbird
-exec --no-startup-id "urxvtcd -name ncmpcpp -e ncmpcpp"
+exec --no-startup-id "urxvtcd -name ncmpcpp -e ncmpcpp -S visualizer"
 exec --no-startup-id i3-msg 'workspace 1: ; exec --no-startup-id firefox'
 exec --no-startup-id slack
 
@@ -32,6 +37,8 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 bindsym $mod+c exec --no-startup-id "rofi -show calc -modi calc -no-show-match -no-sort"
 bindsym $mod+n exec --no-startup-id "urxvtcd -name Ranger -e ranger"
+bindsym $mod+x exec --no-startup-id "rofi -modi 'clipboard:greenclip print' -show clipboard -run-command '{cmd}'"
+exec --no-startup-id setxkbmap -option caps:escape
 
 #settings
 for_window [class="^.*"] border pixel 1
@@ -51,9 +58,9 @@ set $ws10 "10: "
 
 bar {
     position top
-    font pango:Hack, FontAwesome 12
+    font pango:SauceCodePro Nerd Font 12
     strip_workspace_numbers yes
-    separator_symbol " "
+    separator_symbol "|"
     status_command py3status -c $HOME/.config/i3/i3status.conf
 
     colors {
