--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -1,3 +1,4 @@
+order += keyboard_locks
 order += 'spotify'
 order += 'i3pystatus mpd'
 order += volume_status
@@ -25,6 +26,7 @@ battery_level{
     blocks=''
     charging_character=''
     format='{icon} {percent}%'
+    on_click 1 = 'exec i3-msg "exec urxvtcd -name Powertop -e sudo powertop"'
 }
 
 arch_updates {
@@ -69,4 +71,9 @@ spotify {
     button_previous = 5
     format = "{title}::{artist}"
     format_down = ""
+}
+
+keyboard_locks  {
+    format = '\?color=good [\?if=num_lock NUM][\?soft  ]'
+    format += '[\?if=caps_lock CAPS][\?soft  ][\?if=scroll_lock SCR]'
 }
