--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -4,5 +4,6 @@ default_linemode devicons
 set preview_images true
 set preview_images_method urxvt
 set colorscheme desktop
-map DD shell mv %s /home/${USER}/.local/share/Trash/files/ 
+map dD shell -s trash-put %s
 set draw_borders true
+map <c-n>  eval fm.tab_new('%d')
