--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -148,7 +148,7 @@ ext pdf, has okular,   X, flag f = okular -- "$@"
 ext pdf, has epdfview, X, flag f = epdfview -- "$@"
 ext pdf, has qpdfview, X, flag f = qpdfview "$@"
 
-ext epub, has easy-ebook-viewer, X, flag f = easy-ebook-viewer -- "$@"
+ext epub, has zathura, X, flag f = zathura -- "$@"
 ext uvproj, has wine, X, flag f = wine "C:\Keil\UV4\UV4.exe" -- "$@"
 ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
 
