--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,8 +3,24 @@
 	name = Vivek Malneedi
 	signingkey = 3F7C36B376F96C60
 [color]
-	ui = auto
+	ui = true
 [gpg]
 	program = gpg2
 [commit]
 	gpgsign = true
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color "diff"]
+	meta = yellow
+	frag = magenta bold
+	commit = yellow bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
+[core]
+	pager = diff-so-fancy | less --tabs=4 -RFX
+[diff-so-fancy]
+	first-run = false
