--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -16,7 +16,8 @@ clock {
 i3pystatus battery {
     module = 'battery'
     format = '{consumption:.0f}W'
-    alert = False
+    alert=True
+    alert_percentage=5
 }
 
 battery_level{
@@ -24,7 +25,6 @@ battery_level{
     blocks=''
     charging_character=''
     format='{icon} {percent}%'
-    on_click 1 = 'exec i3-msg "exec urxvtcd -name Powertop -e sudo powertop"'
 }
 
 backlight {
@@ -56,7 +56,7 @@ spotify {
     button_next = 4
     button_play_pause = 1
     button_previous = 5
-    format = "{title}::{artist}"
+    format = "{title} - {artist}"
     format_down = ""
 }
 
