--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -4,36 +4,37 @@ gaps outer 0
 smart_gaps on
 
 #autostart
-exec --no-startup-id xrandr -s 2560x1440
-exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nm-applet
 exec --no-startup-id feh --bg-scale $HOME/Pictures/firewatch-1554245414451-2379.jpg
 exec --no-startup-id xss-lock -- betterlockscreen -l
 exec --no-startup-id compton -b
-exec --no-startup-id beet mpdstats
-exec --no-startip-id redshift-gtk
+# exec --no-startup-id beet mpdstats
+# exec --no-startip-id redshift-gtk
 exec --no-startup-id caffeine
 exec --no-startup-id megasync
+exec --no-startup-id slack
 exec --no-startup-id blueberry-tray
 exec --no-startup-id betterlockscreen -l
 
 #application autostart
-assign [class="Thunderbird"] 6: 
-#assign [instance="Slack"] 10: 
+assign [class="Mailspring"] 6: 
+assign [class="Slack"] 10: 
 assign [instance="ncmpcpp"] 5: 
-# assign [class="Caprine"] 9: 
+assign [class="TelegramDesktop"] 9: 
 
-exec --no-startup-id thunderbird
+exec --no-startup-id mailspring
 exec --no-startup-id "alacritty --class ncmpcpp -e ncmpcpp -S visualizer"
 exec --no-startup-id i3-msg 'workspace 1: ; exec --no-startup-id firefox'
-# exec --no-startup-id caprine
+exec --no-startup-id telegram-desktop
+exec --no-startup-id udiskie -s &
 
 #keybinds and custom settings
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer sset Master -q 5%+
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer sset Master -q 5%-
 bindsym XF86AudioMute exec --no-startup-id "amixer sset Master toggle
-bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5 # increase screen brightness
-bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5 # increase screen brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5 # decrease screen brightness
 bindsym $mod+Return exec --no-startup-id alacritty
 bindsym $mod+d exec --no-startup-id rofi -show run
 bindsym $mod+Shift+e exec --no-startup-id $HOME/.config/rofi-power/rofi-power
@@ -41,9 +42,7 @@ bindsym $mod+m exec --no-startup-id rofi-mpc
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 bindsym $mod+c exec --no-startup-id rofi -show calc -modi calc -no-show-match -no-sort -calc-command "echo '{result}' | xclip -selection clipboard"
-bindsym $mod+x exec --no-startup-id "rofi -modi 'clipboard:greenclip print' -show clipboard -run-command '{cmd}'"
 exec --no-startup-id setxkbmap -option caps:escape
-bindsym $mod+n exec --no-startup-id $HOME/utils/scripts/addmusic.sh
 
 #settings
 for_window [class="^.*"] border pixel 1
