--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -8,7 +8,7 @@ smart_gaps on
 exec --no-startup-id nm-applet
 exec --no-startup-id feh --bg-scale $HOME/Pictures/firewatch-1554245414451-2379.jpg
 exec --no-startup-id xss-lock -- betterlockscreen -l
-exec --no-startup-id compton -b
+exec --no-startup-id picom -b
 # exec --no-startup-id beet mpdstats
 # exec --no-startip-id redshift-gtk
 exec --no-startup-id caffeine
@@ -33,8 +33,8 @@ exec --no-startup-id udiskie -s &
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer sset Master -q 5%+
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer sset Master -q 5%-
 bindsym XF86AudioMute exec --no-startup-id "amixer sset Master toggle
-bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5 # increase screen brightness
-bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id pkexec /usr/bin/brillo -A 5
+bindsym XF86MonBrightnessDown exec --no-startup-id pkexec /usr/bin/brillo -U 5
 bindsym $mod+Return exec --no-startup-id alacritty
 bindsym $mod+d exec --no-startup-id rofi -show run
 bindsym $mod+Shift+e exec --no-startup-id $HOME/.config/rofi-power/rofi-power
