--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -6,7 +6,7 @@ smart_gaps on
 #autostart
 # exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nm-applet
-exec --no-startup-id feh --bg-scale $HOME/Pictures/firewatch-1554245414451-2379.jpg
+exec --no-startup-id feh --bg-scale $HOME/Pictures/firewatch.png
 exec --no-startup-id xss-lock -- betterlockscreen -l
 exec --no-startup-id picom -b
 # exec --no-startup-id beet mpdstats
