--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -27,3 +27,5 @@
 [aliases]
     code-changes = "!git log --format=format: --name-only | egrep -v '^$' | sort | uniq -c | sort -rg | head -10"
     cc = "!git code-changes"
+[pull]
+	rebase = true
