--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,6 +1,9 @@
 # vo=gpu
-# hwdec=vaapi
+hwdec=vaapi
 profile=gpu-hq
+scale=ewa_lanczossharp
+cscale=ewa_lanczossharp
+tscale=oversample
 ytdl-format=bestvideo[height<=?1440]+bestaudio/best
 replaygain=track
 
