--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -45,35 +45,37 @@ draw_bold_text_with_bright_colors: true
 
 colors:
   primary:
-    background: "#1B2B34"
-    foreground: "0xeff0eb"
+    background:        '#011627'
+    foreground:        '#acb4c2'
+    bright_foreground: '#eeeeee'
 
   cursor:
-    cursor: "0x97979b"
+    text:   '#080808'
+    cursor: '#9ca1aa'
 
   selection:
-    text: "0x282a36"
-    background: "0xfeffff"
+    text:       '#080808'
+    background: '#b2ceee'
 
   normal:
-    black: "0x282a36"
-    red: "0xff5c57"
-    green: "0x5af78e"
-    yellow: "0xf3f99d"
-    blue: "0x57c7ff"
-    magenta: "0xff6ac1"
-    cyan: "0x9aedfe"
-    white: "0xf1f1f0"
+    black:   '#1d3b53'
+    red:     '#fc514e'
+    green:   '#a1cd5e'
+    yellow:  '#e3d18a'
+    blue:    '#82aaff'
+    magenta: '#c792ea'
+    cyan:    '#7fdbca'
+    white:   '#a1aab8'
 
   bright:
-    black: "0x686868"
-    red: "0xff5c57"
-    green: "0x5af78e"
-    yellow: "0xf3f99d"
-    blue: "0x57c7ff"
-    magenta: "0xff6ac1"
-    cyan: "0x9aedfe"
-    white: "0xeff0eb"
+    black:   '#7c8f8f'
+    red:     '#ff5874'
+    green:   '#21c7a8'
+    yellow:  '#ecc48d'
+    blue:    '#82aaff'
+    magenta: '#ae81ff'
+    cyan:    '#7fdbca'
+    white:   '#d6deeb'
 
 bell:
   animation: EaseOutExpo
