--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -6,6 +6,7 @@ cscale=ewa_lanczossharp
 tscale=oversample
 ytdl-format=bestvideo[height<=?1440]+bestaudio/best
 replaygain=track
+sub-auto=all
 
 [svp]
 input-ipc-server=/tmp/mpvsocket     # Receives input from SVP
